--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastapi>=0.115.12",
+    "pypdf2>=3.0.1",
+    "uvicorn[standard]>=0.32.1",
+    "python-multipart>=0.0.19",
+]
